# zeichma

./: LICENSE  README.md  example.zm  meson.build
docs/: Doxyfile.in  meson.build
include/: meson.build
include/scanner/: meson.build  scanner.h
src/: main.c  meson.build
src/scanner/: meson.build  scanner.c  scanner.l
